# ComputerVisionT3

./: .gitignore  README.md
Scripts/: initialize_pose.py  move_husky2.py  read_tags.py
Simulation/: CMakeLists.txt  package.xml
Simulation/config/: costmap_commons.yaml  global_costmap.yaml  husky.rviz  local_costmap.yaml
Simulation/configs/: control.yaml  localization.yaml  planner.yaml  tags.yaml
Simulation/launch/: amcl.launch  continuous_detection.launch  husky_bringup.launch  move_base.launch  multi_husky_call.launch  simulation.launch
Simulation/worlds/: warehouse_cells.world  warehouse_cells_joystick.yaml
Simulation/xacro/: empty.urdf  husky.urdf.xacro  sick_lms1xx.urdf.xacro  sick_lms1xx_mount.urdf.xacro
